--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "htmlacademy-gulp-template",
-  "version": "2.0.6",
+  "name": "Drink2go",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
   "engines": {
@@ -31,7 +31,7 @@
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "3.0.0",
     "@linthtml/linthtml": "0.9.6",
-    "browser-sync": "3.0.2",
+    "browser-sync": "^2.27.11",
     "browserslist-to-esbuild": "2.1.1",
     "eslint": "8.57.0",
     "eslint-config-htmlacademy": "10.0.1",
@@ -57,5 +57,8 @@
   },
   "overrides": {
     "es5-ext": "0.10.53"
+  },
+  "dependencies": {
+    "nouislider": "^15.8.1"
   }
 }
